--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,7 +241,7 @@ div#map {
 }
 
 .map-search-pos {
-  padding-left: 25%;
+  padding-left: 30%;
   padding-top: 5%;
 }
 
@@ -373,6 +373,13 @@ div#map {
   width: auto;
   height: 60%;
   padding-left: 3%;
+}
+
+/*--- Search Page --*/
+
+.search-banner {
+  padding-top: 60px;
+  padding-left: 450px;
 }
 
 /*--- Footer --*/
@@ -586,6 +593,13 @@ li a {
   .ind-hall-img {
     height: 30%;
   }
+
+  /*--- Search page styles--*/
+
+  .search-banner {
+    padding-top: 60px;
+    padding-left: 250px;
+  }
 }
 
 @media screen and (max-width: 812px) {
@@ -681,6 +695,13 @@ li a {
 
   .ind-hall-img {
     height: 25%;
+  }
+
+  /*--- Search page styles--*/
+
+  .search-banner {
+    padding-top: 8%;
+    padding-left: 12%;
   }
 }
 
@@ -908,5 +929,13 @@ li a {
 
   .ind-hall-img {
     height: 20%;
+  }
+
+  /*--- Search Page styles--*/
+
+  .search-banner {
+    text-align: center;
+    padding-top: 12%;
+    padding-left: 3%;
   }
 }
